--- a/app/src/main/res/layout/activity_second_.xml
+++ b/app/src/main/res/layout/activity_second_.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".Second_Activity"
-    android:orientation="vertical">
+    tools:context=".Second_Activity">
+
+
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
@@ -52,12 +53,35 @@
                 android:text="@string/tab_text_3" />
 
         </android.support.design.widget.TabLayout>
+
+
+
     </android.support.design.widget.AppBarLayout>
+
 
     <android.support.v4.view.ViewPager
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-</LinearLayout>
+
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|bottom"
+            android:layout_margin="@dimen/fab_margin"
+           android:src="@drawable/ic_add_black_24dp" />
+
+
+
+
+
+
+
+</android.support.design.widget.CoordinatorLayout>
+
+
