--- a/app/src/main/res/layout/fragment_clientes.xml
+++ b/app/src/main/res/layout/fragment_clientes.xml
@@ -3,21 +3,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     tools:context=".ClientesFragment">
 
 
+
+
+
+
+    <!-- TODO: Update blank fragment layout -->
     <android.support.v7.widget.RecyclerView
 
-    android:layout_width = "match_parent"
-    android:layout_height= "match_parent"
-    android:id="@+id/clientes_recyclerview">
+        android:id="@+id/clientes_recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
 
 
     </android.support.v7.widget.RecyclerView>
 
-    <!-- TODO: Update blank fragment layout -->
+
+
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -25,5 +32,10 @@
         android:textAlignment="center"
         android:textSize="24sp"
         android:textStyle="bold" />
+
+
+
+
+
 
 </LinearLayout>
