--- a/app/src/main/res/layout/fragment_registro__ventas_.xml
+++ b/app/src/main/res/layout/fragment_registro__ventas_.xml
@@ -1,19 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:layout_height="wrap_content"
+    android:gravity="center_horizontal"
+    android:padding="20dp"
+    android:layout_marginTop="30dp"
     tools:context=".Registro_Ventas_Fragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:id="@+id/textViewRV"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text='Aquí irá el registro de ventas del repartidor "X"'
-        android:textAlignment="center"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+
+
 
 </LinearLayout>
