Revert "fallo.comit"
This reverts commit a40ce2db180d22c6f5878a42a8e414221561cb3e.

--- a/app/src/main/res/layout/activity_ventas_.xml
+++ b/app/src/main/res/layout/activity_ventas_.xml
@@ -5,18 +5,17 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:gravity="center_horizontal"
     android:padding="20dp"
     android:layout_marginTop="30dp"
-    android:gravity="center_horizontal"
     tools:context=".Ventas_Activity">
 
 
     <LinearLayout
         android:layout_width="271dp"
-        android:layout_height="300dp"
-        android:layout_marginLeft="17dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
         android:orientation="vertical">
-
 
 
         <TextView
@@ -44,11 +43,15 @@
 
 
 
-        </LinearLayout>
+        <TextView
+            android:id="@+id/referencia_cliente_ventas"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Referencia"
+            android:textStyle="bold"/>
 
         <LinearLayout
-
-            android:layout_width="340dp"
+            android:layout_width="271dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="0dp"
             android:orientation="horizontal"
@@ -67,13 +70,7 @@
                 android:text="Envases Llenos"
                 android:textStyle="bold"/>
 
-            <LinearLayout
-                android:gravity="end"
-                android:layout_width="170dp"
-                android:layout_height="match_parent">
-
             <EditText
-
                 android:id="@+id/cantiad_llenos_ventas"
                 android:layout_width="100dp"
                 android:layout_height="50dp"
@@ -84,15 +81,13 @@
                 android:inputType="number"
                 android:textStyle="bold"/>
 
-            </LinearLayout>
-
         </LinearLayout>
 
 
 
 
         <LinearLayout
-            android:layout_width="340dp"
+            android:layout_width="271dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="0dp"
             android:orientation="horizontal"
@@ -111,11 +106,6 @@
                 android:text="Envases Vacíos"
                 android:textStyle="bold"/>
 
-            <LinearLayout
-                android:gravity="end"
-                android:layout_width="170dp"
-                android:layout_height="match_parent">
-
             <EditText
                 android:id="@+id/cantiad_vacios_ventas"
                 android:layout_width="100dp"
@@ -127,23 +117,18 @@
                 android:inputType="number"
                 android:textStyle="bold"/>
 
-            </LinearLayout>
-
-
         </LinearLayout>
 
 
 
 
         <LinearLayout
-            android:layout_width="340dp"
+            android:layout_width="271dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="0dp"
             android:orientation="horizontal"
             android:layout_marginTop="1dp"
             >
-
-
 
 
             <Spinner
@@ -157,13 +142,6 @@
                 android:text="Envases Vacíos"
                 android:textStyle="bold"/>
 
-
-            <LinearLayout
-                android:gravity="end"
-                android:layout_width="170dp"
-                android:layout_height="match_parent">
-
-
             <EditText
                 android:id="@+id/cantiad_productos_ventas"
                 android:layout_width="100dp"
@@ -175,16 +153,10 @@
                 android:inputType="textMultiLine"
                 android:textStyle="bold"/>
 
-            </LinearLayout>
-
-
         </LinearLayout>
 
-
-
-
         <LinearLayout
-            android:layout_width="340dp"
+            android:layout_width="271dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="0dp"
             android:orientation="horizontal"
@@ -203,12 +175,6 @@
                 android:text="Saldo"
                 android:textStyle="bold"/>
 
-            <LinearLayout
-                android:gravity="end"
-                android:layout_width="170dp"
-                android:layout_height="match_parent">
-
-
             <TextView
                 android:id="@+id/entrega_ventas"
                 android:layout_width="100dp"
@@ -221,9 +187,6 @@
                 android:text="Entrega"
                 android:textStyle="bold"/>
 
-            </LinearLayout>
-
-
         </LinearLayout>
 
 
@@ -232,7 +195,7 @@
 
 
         <LinearLayout
-            android:layout_width="340dp"
+            android:layout_width="271dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="0dp"
             android:orientation="horizontal"
@@ -259,11 +222,6 @@
                 android:drawableLeft="@drawable/ic_check_black_24dp"/>
 
 
-            <LinearLayout
-                android:gravity="end"
-                android:layout_width="120dp"
-                android:layout_height="match_parent">
-
             <EditText
                 android:id="@+id/entrega_cantidad_ventas"
                 android:layout_width="100dp"
@@ -275,10 +233,10 @@
                 android:inputType="numberDecimal"
                 android:textStyle="bold"/>
 
-            </LinearLayout>
-
-
         </LinearLayout>
+
+
+    </LinearLayout>
 
 
 
