--- a/app/src/main/res/layout/activity_ventas_.xml
+++ b/app/src/main/res/layout/activity_ventas_.xml
@@ -12,8 +12,8 @@
 
 
     <LinearLayout
-        android:layout_width="271dp"
-        android:layout_height="wrap_content"
+        android:layout_width="300dp"
+        android:layout_height="460dp"
         android:layout_marginLeft="16dp"
         android:orientation="vertical">
 
@@ -24,14 +24,14 @@
             android:layout_height="wrap_content"
             android:text="Nombre del Cliente"
             android:textSize="24sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/direccion_cliente_ventas"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Dirección"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
 
         <TextView
@@ -39,24 +39,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Barrio"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
-
-
-        <TextView
-            android:id="@+id/referencia_cliente_ventas"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Referencia"
-            android:textStyle="bold"/>
 
         <LinearLayout
-            android:layout_width="271dp"
+            android:layout_width="340dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="0dp"
-            android:orientation="horizontal"
             android:layout_marginTop="30dp"
-            >
+            android:orientation="horizontal">
 
 
             <TextView
@@ -66,33 +57,39 @@
                 android:layout_margin="@dimen/appbar_padding_top"
                 android:layout_marginTop="10dp"
                 android:drawablePadding="0dp"
-                android:padding="0dp"
+                android:padding="5dp"
                 android:text="Envases Llenos"
-                android:textStyle="bold"/>
+                android:textAlignment="center"
+                android:textStyle="bold" />
 
-            <EditText
-                android:id="@+id/cantiad_llenos_ventas"
-                android:layout_width="100dp"
-                android:layout_height="50dp"
-                android:layout_margin="@dimen/appbar_padding_top"
-                android:layout_marginTop="10dp"
-                android:drawablePadding="0dp"
-                android:padding="0dp"
-                android:inputType="number"
-                android:textStyle="bold"/>
+            <LinearLayout
+                android:gravity="end"
+                android:layout_width="165dp"
+                android:layout_height="match_parent">
+
+
+                <EditText
+                    android:id="@+id/cantiad_llenos_ventas"
+                    android:layout_width="100dp"
+                    android:layout_height="50dp"
+                    android:layout_margin="@dimen/appbar_padding_top"
+                    android:layout_marginTop="10dp"
+                    android:drawablePadding="0dp"
+                    android:inputType="number"
+                    android:padding="0dp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
 
-
-
         <LinearLayout
-            android:layout_width="271dp"
+            android:layout_width="340dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="0dp"
-            android:orientation="horizontal"
             android:layout_marginTop="1dp"
-            >
+            android:orientation="horizontal">
 
 
             <TextView
@@ -102,9 +99,18 @@
                 android:layout_margin="@dimen/appbar_padding_top"
                 android:layout_marginTop="10dp"
                 android:drawablePadding="0dp"
-                android:padding="0dp"
+                android:padding="5dp"
                 android:text="Envases Vacíos"
-                android:textStyle="bold"/>
+                android:textAlignment="center"
+                android:textStyle="bold" />
+
+
+            <LinearLayout
+                android:gravity="end"
+                android:layout_width="165dp"
+                android:layout_height="match_parent">
+
+
 
             <EditText
                 android:id="@+id/cantiad_vacios_ventas"
@@ -113,55 +119,62 @@
                 android:layout_margin="@dimen/appbar_padding_top"
                 android:layout_marginTop="10dp"
                 android:drawablePadding="0dp"
-                android:padding="0dp"
                 android:inputType="number"
-                android:textStyle="bold"/>
+                android:padding="0dp"
+                android:textStyle="bold" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
 
-
-
         <LinearLayout
-            android:layout_width="271dp"
+            android:layout_width="340dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="0dp"
-            android:orientation="horizontal"
             android:layout_marginTop="1dp"
-            >
+            android:orientation="horizontal">
 
 
             <Spinner
                 android:id="@+id/lista_productos_ventas"
-                android:layout_width="100dp"
+                android:layout_width="120dp"
                 android:layout_height="50dp"
                 android:layout_margin="@dimen/appbar_padding_top"
                 android:layout_marginTop="10dp"
                 android:drawablePadding="0dp"
                 android:padding="0dp"
-                android:text="Envases Vacíos"
-                android:textStyle="bold"/>
+                android:text="Artículos"
+                android:textStyle="bold" />
 
-            <EditText
-                android:id="@+id/cantiad_productos_ventas"
-                android:layout_width="100dp"
-                android:layout_height="50dp"
-                android:layout_margin="@dimen/appbar_padding_top"
-                android:layout_marginTop="10dp"
-                android:drawablePadding="0dp"
-                android:padding="0dp"
-                android:inputType="textMultiLine"
-                android:textStyle="bold"/>
+            <LinearLayout
+
+                android:gravity="end"
+                android:layout_width="145dp"
+                android:layout_height="match_parent">
+
+
+                <EditText
+                    android:id="@+id/cantiad_productos_ventas"
+                    android:layout_width="100dp"
+                    android:layout_height="50dp"
+                    android:layout_margin="@dimen/appbar_padding_top"
+                    android:layout_marginTop="10dp"
+                    android:drawablePadding="0dp"
+                    android:inputType="textMultiLine"
+                    android:padding="0dp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="271dp"
+            android:layout_width="340dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="0dp"
-            android:orientation="horizontal"
             android:layout_marginTop="1dp"
-            >
+            android:orientation="horizontal">
 
 
             <TextView
@@ -173,34 +186,40 @@
                 android:drawablePadding="0dp"
                 android:padding="0dp"
                 android:text="Saldo"
-                android:textStyle="bold"/>
+                android:textAlignment="center"
+                android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/entrega_ventas"
-                android:layout_width="100dp"
-                android:layout_height="50dp"
-                android:layout_margin="@dimen/appbar_padding_top"
-                android:layout_marginTop="10dp"
-                android:drawablePadding="0dp"
-                android:padding="0dp"
-                android:textAlignment="textEnd"
-                android:text="Entrega"
-                android:textStyle="bold"/>
+            <LinearLayout
+
+                android:gravity="end"
+                android:layout_width="165dp"
+                android:layout_height="match_parent">
+
+
+                <TextView
+                    android:id="@+id/entrega_ventas"
+                    android:layout_width="100dp"
+                    android:layout_height="50dp"
+                    android:layout_margin="@dimen/appbar_padding_top"
+                    android:layout_marginTop="10dp"
+                    android:drawablePadding="0dp"
+                    android:padding="0dp"
+                    android:text="Entrega"
+                    android:textAlignment="center"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
 
         </LinearLayout>
 
 
-
-
-
-
         <LinearLayout
-            android:layout_width="271dp"
+            android:layout_width="340dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="0dp"
-            android:orientation="horizontal"
             android:layout_marginTop="1dp"
-            >
+            android:orientation="horizontal">
 
 
             <EditText
@@ -210,16 +229,23 @@
                 android:layout_margin="@dimen/appbar_padding_top"
                 android:layout_marginTop="10dp"
                 android:drawablePadding="0dp"
-                android:padding="0dp"
                 android:inputType="numberDecimal"
-                android:textStyle="bold"/>
+                android:padding="0dp"
+                android:textStyle="bold" />
 
 
             <Button
                 android:id="@+id/button_confirmar_ventas"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:drawableLeft="@drawable/ic_check_black_24dp"/>
+                android:drawableLeft="@drawable/ic_check_black_24dp" />
+
+
+            <LinearLayout
+
+                android:gravity="end"
+                android:layout_width="120dp"
+                android:layout_height="match_parent">
 
 
             <EditText
@@ -227,11 +253,15 @@
                 android:layout_width="100dp"
                 android:layout_height="50dp"
                 android:layout_margin="@dimen/appbar_padding_top"
+
+
                 android:layout_marginTop="10dp"
                 android:drawablePadding="0dp"
-                android:padding="0dp"
                 android:inputType="numberDecimal"
-                android:textStyle="bold"/>
+                android:padding="0dp"
+                android:textStyle="bold" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
