--- a/app/src/main/res/layout/fragment_registro__ventas_.xml
+++ b/app/src/main/res/layout/fragment_registro__ventas_.xml
@@ -1,15 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal"
+
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center_horizontal"
-    android:padding="20dp"
-    android:layout_marginTop="30dp"
+    android:layout_height="match_parent"
+    android:orientation="horizontal"
+
     tools:context=".Registro_Ventas_Fragment">
+
+
+
+    <android.support.v7.widget.RecyclerView
+
+        android:id="@+id/clientes_recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+
+    </android.support.v7.widget.RecyclerView>
 
 
 
 
 </LinearLayout>
+
+
+
+
