--- a/app/src/main/res/layout/item_ventas.xml
+++ b/app/src/main/res/layout/item_ventas.xml
@@ -1,64 +1,191 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+
+    android:id="@+id/ventas_item_id"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="5dp"
-    android:layout_marginTop="10dp"
-    android:background="#000"
-    android:id="@+id/ventas_item_id">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:gravity="center">
 
 
-
-    <ImageView
-        android:layout_width="56dp"
-        android:layout_height="56dp"
-        android:src="@mipmap/ic_launcher_cargass_ventas"
-        android:id="@+id/img_cargas_ventas"/>
-
-
-
-    <LinearLayout
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/titulo_cargas_ventas"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginLeft="16dp">
+        android:text="CARGAS"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:textColor="#000"
+        android:background="#F2F2"/>
 
 
-        <TextView
-            android:id="@+id/titulo_cargas_ventas"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Cargas"
-            android:textAlignment="center"
-            android:textColor="#FFF"
-            android:textSize="30sp"
-            android:textStyle="bold" />
+    <!--LinearLayout Horizontal del TOTAL DE CARGAS -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="#000">
 
         <TextView
             android:id="@+id/total_cargas_ventas"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:text="Total_Cargas"
             android:textAlignment="center"
-            android:textColor="#FFF"
-            android:textSize="24sp" />
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textColor="#FFF"/>
 
-        <TextView
-            android:id="@+id/cantidad_cargas_ventas"
-            android:layout_width="wrap_content"
+
+        <EditText
+            android:id="@+id/numero_total_cargas_ventas"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:text="Cantidad_Cargas"
+            android:hint="Total_Cargas"
+            android:inputType="number"
             android:textAlignment="center"
-            android:textColor="#FFF"
-            android:textSize="24sp" />
-
-
+            android:textSize="15sp"
+            android:textStyle="bold"
+            android:textColorHint="#FFF"/>
 
     </LinearLayout>
 
 
-    
+
+
+    <!--Este LinearLayout VERTICAL contendrá a "DESCARGAS" por el momento (Los otros 2: "Money" "Envases rotos" por el momento no) -->
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <!--LinearLayout Horizontal de la CANTIDAD DE VECES QUE SE REALIZARON CARGAS-->
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:background="#000">
+
+
+                <TextView
+                    android:id="@+id/veces_cargas_ventas"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:text="Cantidad_Cargas"
+                    android:textAlignment="center"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:textColor="#FFF"/>
+
+                <EditText
+                    android:id="@+id/numero_veces_cargas_ventas"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:hint="Veces"
+                    android:inputType="number"
+                    android:textAlignment="center"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:textColorHint="#FFF"/>
+
+            </LinearLayout>
+
+
+
+            <TextView
+                android:id="@+id/titulo_descargas_ventas"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="DESCARGAS"
+                android:textAlignment="center"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                android:textColor="#000"
+                android:background="#F2F2"/>
+
+
+            <LinearLayout
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#000"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/total_descargas_ventas"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:background="#000"
+                    android:text="Total_Descargas"
+                    android:textAlignment="center"
+                    android:textColor="#FFF"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+
+                <EditText
+                    android:id="@+id/numero_total_descargas_ventas"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:hint="Veces"
+                    android:inputType="number"
+                    android:textAlignment="center"
+                    android:textColorHint="#FFF"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/cantidad_descargas_ventas"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:background="#000"
+                android:text="Cantidad_Descargas"
+                android:textAlignment="center"
+                android:textColor="#FFF"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+
+
+            <EditText
+                android:id="@+id/numero_veces_descargas_ventas"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:hint="Veces"
+                android:inputType="number"
+                android:textAlignment="center"
+                android:textColorHint="#FFF"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:background="#000"/>
+
+            </LinearLayout>
+
+
+        </LinearLayout>  <!--Aquí termina el LinearLayout "Vertical" -->
+
+
+
+
+
+
+
+
 
 </LinearLayout>
