--- a/app/src/main/res/layout/fragment_registro__ventas_.xml
+++ b/app/src/main/res/layout/fragment_registro__ventas_.xml
@@ -1,24 +1,405 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
     xmlns:tools="http://schemas.android.com/tools"
 
+    android:id="@+id/fragment_ventas_id"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
-
+    android:orientation="vertical"
+    android:gravity="center"
     tools:context=".Registro_Ventas_Fragment">
 
+    <TextView
+        android:id="@+id/titulo_cargas-descargas_ventas"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#304ffe"
+        android:text="Cargas y Descargas"
+        android:textAlignment="center"
+        android:textColor="#FFF"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
 
-    <android.support.v7.widget.RecyclerView
+    <!--LinearLayout Horizontal del TOTAL DE CARGAS -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="#FFF">
 
-        android:id="@+id/clientes_recyclerview"
+        <TextView
+            android:id="@+id/total_cargas_ventas"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:text="Total_Cargas:"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textColor="#000"/>
+
+
+        <EditText
+            android:id="@+id/numero_total_cargas_ventas"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:hint="Número"
+            android:inputType="number"
+            android:textAlignment="center"
+            android:textColorHint="#000"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
+
+
+
+    <!--Este LinearLayout VERTICAL contendrá a "DESCARGAS" por el momento (Los otros 2: "Money" "Envases rotos" por el momento no) -->
+
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <!--LinearLayout Horizontal de la CANTIDAD DE VECES QUE SE REALIZARON CARGAS-->
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:background="#FFF">
 
 
-    </android.support.v7.widget.RecyclerView>
+            <TextView
+                android:id="@+id/total_descargas_ventas"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:text="Total_Descargas:"
+                android:textAlignment="center"
+                android:textColor="#000"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/numero_total_descargas_ventas"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:hint="Número"
+                android:inputType="number"
+                android:textAlignment="center"
+                android:textColorHint="#000"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#FFF">
+
+            <TextView
+                android:id="@+id/total_recuento_envases_ventas"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:text="Recuento_Envases:"
+                android:textAlignment="center"
+                android:textColor="#000"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+
+
+            <EditText
+                android:id="@+id/numero_recuento_envases_ventas"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:hint="Número"
+                android:inputType="number"
+                android:textAlignment="center"
+                android:textColorHint="#000"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+        <!--Aquí termina la tupla del RECUENTO DE ENVASES -->
+
+        <LinearLayout
+
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#FFF">
+
+
+            <TextView
+                android:id="@+id/total_envases_rotos_ventas"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:text="Total_Envases_Rotos:"
+                android:textAlignment="center"
+                android:textColor="#000"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+
+            <EditText
+                android:id="@+id/numero_total_envases_rotos_ventas"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:hint="Número"
+                android:inputType="number"
+                android:textAlignment="center"
+                android:textColorHint="#000"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
+        <!--Fin de la tupla de TOTAL DE ENVASES ROTOS -->
+
+
+        <TextView
+            android:id="@+id/titulo_dinero_ventas"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#304ffe"
+            android:text="Dinero"
+            android:textAlignment="center"
+            android:textColor="#FFF"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+
+        <LinearLayout
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#FFF"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/monto_inicial_ventas"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:background="#FFF"
+                android:text="Monto Inicial"
+                android:textAlignment="center"
+                android:textColor="#000"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+
+            <EditText
+                android:id="@+id/numero_monto_incial_ventas"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:hint="Número"
+                android:inputType="number"
+                android:textAlignment="center"
+                android:textColorHint="#000"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:background="#FFF">
+
+            <TextView
+                android:id="@+id/total_dinero_ventas"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:background="#FFF"
+                android:text="Total:"
+                android:textAlignment="center"
+                android:textColor="#000"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+
+            <EditText
+                android:id="@+id/numero_total_dinero_ventas"
+                android:layout_width="185dp"
+                android:layout_height="wrap_content"
+                android:background="#FFF"
+                android:hint="Número"
+                android:inputType="number"
+                android:textAlignment="center"
+                android:textColorHint="#000"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
+        <!--Comienzo de ARTÍCULOS -->
+
+        <TextView
+            android:id="@+id/titulo_articulos_ventas"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#304ffe"
+            android:text="Artículos"
+            android:textAlignment="center"
+            android:textColor="#FFF"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#FFF">
+
+
+            <TextView
+                android:id="@+id/total_dispenser_plasticos_ventas"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:background="#FFF"
+                android:text="Total_Disp.Plasticos:"
+                android:textAlignment="center"
+                android:textColor="#000"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/numero_total_dispenser_plasticos_ventas"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:background="#FFF"
+                android:hint="Número"
+                android:inputType="number"
+                android:textAlignment="center"
+                android:textColorHint="#000"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+
+        </LinearLayout>
+
+        <!--Fin de la tupla de TOTAL DE DISPENSER PLASTICO -->
+
+        <LinearLayout
+
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#FFF">
+
+
+            <TextView
+                android:id="@+id/total_dispenser_electrico_ventas"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:background="#FFF"
+                android:text="Total_Disp.Electricos:"
+                android:textAlignment="center"
+                android:textColor="#000"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+
+            <EditText
+                android:id="@+id/numero_total_dispenser_electricos_ventas"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:background="#FFF"
+                android:hint="Número"
+                android:inputType="number"
+                android:textAlignment="center"
+                android:textColorHint="#000"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <!--Fin de la tupla Dispenser electricos -->
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:background="#FFF">
+
+
+            <TextView
+                android:id="@+id/total_canillas_ventas"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:background="#FFF"
+                android:text="Total_Canillas:"
+                android:textAlignment="center"
+                android:textColor="#000"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+
+            <EditText
+                android:id="@+id/numero_total_canillas_ventas"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:background="#FFF"
+                android:hint="Número"
+                android:inputType="number"
+                android:textAlignment="center"
+                android:textColorHint="#000"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+
+        </LinearLayout>
+        <!--Fin de la tulpa Total de Canillas vendidas -->
+
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#FFF">
+
+            <TextView
+                android:id="@+id/total_envases_vendidos_ventas"
+                android:layout_width="230dp"
+                android:layout_height="wrap_content"
+                android:background="#FFF"
+                android:text="Total_Envases_Vendidos:"
+                android:textAlignment="center"
+                android:textColor="#000"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+
+            <EditText
+                android:id="@+id/numero_total_envases_vendidos_ventas"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:background="#FFF"
+                android:hint="Número"
+                android:inputType="number"
+                android:textAlignment="center"
+                android:textColorHint="#000"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+
+        </LinearLayout>
+
+
+
+    </LinearLayout>  <!--Aquí termina el LinearLayout "Vertical" -->
+
+
+
 
 
 
