ACTIVITY_DETALLE_CARGAS_DESCARGAS
Se termino con la activity detalle de cargas y descargas

--- a/app/src/main/res/layout/activity_second_.xml
+++ b/app/src/main/res/layout/activity_second_.xml
@@ -38,7 +38,7 @@
                 android:id="@+id/tabItem"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Registro de Ventas" />
+                android:text="Registro de Cargas" />
 
             <android.support.design.widget.TabItem
                 android:id="@+id/tabItem2"
